--- a/vcproj/Project/Editor.vcxproj.filters
+++ b/vcproj/Project/Editor.vcxproj.filters
@@ -388,6 +388,8 @@
     <ClInclude Include="..\..\source\string_utils.h" />
     <ClInclude Include="..\..\source\hotkey_manager.h" />
     <ClInclude Include="..\..\source\borderize_window.h" />
+    <ClInclude Include="..\..\source\automagic_settings.h" />
+    <ClInclude Include="..\..\source\live_action_packets.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\source\json\json_spirit_reader.cpp">
@@ -686,6 +688,7 @@
     <ClCompile Include="..\..\source\string_utils.cpp" />
     <ClCompile Include="..\..\source\hotkey_manager.cpp" />
     <ClCompile Include="..\..\source\borderize_window.cpp" />
+    <ClCompile Include="..\..\source\automagic_settings.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Editor.rc">
