--- a/vcproj/Project/Editor.vcxproj
+++ b/vcproj/Project/Editor.vcxproj
@@ -221,6 +221,7 @@
     <ClCompile Include="..\..\source\container_properties_window.cpp" />
     <ClCompile Include="..\..\source\find_item_window.cpp" />
     <ClCompile Include="..\..\source\hotkey_manager.cpp" />
+    <ClCompile Include="..\..\source\island_generator_dialog.cpp" />
     <ClCompile Include="..\..\source\light_drawer.cpp" />
     <ClCompile Include="..\..\source\replace_items_window.cpp" />
     <ClCompile Include="..\..\source\string_utils.cpp" />
@@ -232,6 +233,7 @@
     <ClInclude Include="..\..\source\automagic_settings.h" />
     <ClInclude Include="..\..\source\borderize_window.h" />
     <ClInclude Include="..\..\source\hotkey_manager.h" />
+    <ClInclude Include="..\..\source\island_generator_dialog.h" />
     <ClInclude Include="..\..\source\light_drawer.h" />
     <ClInclude Include="..\..\source\live_action_packets.h" />
     <ClInclude Include="..\..\source\main_toolbar.h" />
