--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ cmake-build-debug/
 .github/workflows/clang-format.yml
 ACOLINNNNNNNNNNNNNNNNNNNNNNNNNNNNNNN/forgottenserver-1.4.2/independence/data/creaturescripts/scripts/loginmotd.lua
 jo ininnn.txt
+fix-commits.ps1
