--- a/vcproj/Project/Editor.vcxproj
+++ b/vcproj/Project/Editor.vcxproj
@@ -220,6 +220,7 @@
     <ClCompile Include="..\..\source\border_editor_window.cpp" />
     <ClCompile Include="..\..\source\brush_tables.cpp" />
     <ClCompile Include="..\..\source\container_properties_window.cpp" />
+    <ClCompile Include="..\..\source\creature_sprite_manager.cpp" />
     <ClCompile Include="..\..\source\dark_mode_manager.cpp" />
     <ClCompile Include="..\..\source\find_item_window.cpp" />
     <ClCompile Include="..\..\source\ground_validation_dialog.cpp" />
@@ -236,6 +237,7 @@
     <ClInclude Include="..\..\source\automagic_settings.h" />
     <ClInclude Include="..\..\source\borderize_window.h" />
     <ClInclude Include="..\..\source\border_editor_window.h" />
+    <ClInclude Include="..\..\source\creature_sprite_manager.h" />
     <ClInclude Include="..\..\source\dark_mode_manager.h" />
     <ClInclude Include="..\..\source\ground_validation_dialog.h" />
     <ClInclude Include="..\..\source\hotkey_manager.h" />
