--- a/vcproj/Project/Editor.vcxproj
+++ b/vcproj/Project/Editor.vcxproj
@@ -222,6 +222,7 @@
     <ClCompile Include="..\..\source\container_properties_window.cpp" />
     <ClCompile Include="..\..\source\creature_sprite_manager.cpp" />
     <ClCompile Include="..\..\source\dark_mode_manager.cpp" />
+    <ClCompile Include="..\..\source\find_creature_window.cpp" />
     <ClCompile Include="..\..\source\find_item_window.cpp" />
     <ClCompile Include="..\..\source\ground_validation_dialog.cpp" />
     <ClCompile Include="..\..\source\hotkey_manager.cpp" />
@@ -239,6 +240,7 @@
     <ClInclude Include="..\..\source\border_editor_window.h" />
     <ClInclude Include="..\..\source\creature_sprite_manager.h" />
     <ClInclude Include="..\..\source\dark_mode_manager.h" />
+    <ClInclude Include="..\..\source\find_creature_window.h" />
     <ClInclude Include="..\..\source\ground_validation_dialog.h" />
     <ClInclude Include="..\..\source\hotkey_manager.h" />
     <ClInclude Include="..\..\source\island_generator_dialog.h" />
