--- a/vcproj/Project/Editor.vcxproj
+++ b/vcproj/Project/Editor.vcxproj
@@ -238,6 +238,7 @@
     <ClInclude Include="..\..\source\automagic_settings.h" />
     <ClInclude Include="..\..\source\borderize_window.h" />
     <ClInclude Include="..\..\source\border_editor_window.h" />
+    <ClInclude Include="..\..\source\color_utils.h" />
     <ClInclude Include="..\..\source\creature_sprite_manager.h" />
     <ClInclude Include="..\..\source\dark_mode_manager.h" />
     <ClInclude Include="..\..\source\find_creature_window.h" />
