--- a/vcproj/Project/Editor.vcxproj.filters
+++ b/vcproj/Project/Editor.vcxproj.filters
@@ -396,6 +396,7 @@
     <ClInclude Include="..\..\source\border_editor_window.h" />
     <ClInclude Include="..\..\source\creature_sprite_manager.h" />
     <ClInclude Include="..\..\source\find_creature_window.h" />
+    <ClInclude Include="..\..\source\color_utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\source\json\json_spirit_reader.cpp">
