--- a/vcproj/Project/Editor.vcxproj.filters
+++ b/vcproj/Project/Editor.vcxproj.filters
@@ -397,6 +397,7 @@
     <ClInclude Include="..\..\source\creature_sprite_manager.h" />
     <ClInclude Include="..\..\source\find_creature_window.h" />
     <ClInclude Include="..\..\source\color_utils.h" />
+    <ClInclude Include="..\..\source\add_creature_dialog.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\source\json\json_spirit_reader.cpp">
@@ -702,6 +703,7 @@
     <ClCompile Include="..\..\source\border_editor_window.cpp" />
     <ClCompile Include="..\..\source\creature_sprite_manager.cpp" />
     <ClCompile Include="..\..\source\find_creature_window.cpp" />
+    <ClCompile Include="..\..\source\add_creature_dialog.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Editor.rc">
