--- a/vcproj/Project/Editor.vcxproj
+++ b/vcproj/Project/Editor.vcxproj
@@ -230,6 +230,8 @@
     <ClCompile Include="..\..\source\island_generator_dialog.cpp" />
     <ClCompile Include="..\..\source\light_drawer.cpp" />
     <ClCompile Include="..\..\source\map_summary_window.cpp" />
+    <ClCompile Include="..\..\source\otmapgen.cpp" />
+    <ClCompile Include="..\..\source\otmapgen_dialog.cpp" />
     <ClCompile Include="..\..\source\replace_items_window.cpp" />
     <ClCompile Include="..\..\source\string_utils.cpp" />
     <ClCompile Include="..\..\source\tileset_window.cpp" />
@@ -252,6 +254,8 @@
     <ClInclude Include="..\..\source\live_action_packets.h" />
     <ClInclude Include="..\..\source\main_toolbar.h" />
     <ClInclude Include="..\..\source\map_summary_window.h" />
+    <ClInclude Include="..\..\source\otmapgen.h" />
+    <ClInclude Include="..\..\source\otmapgen_dialog.h" />
     <ClInclude Include="..\..\source\otml.h" />
     <ClInclude Include="..\..\source\browse_tile_window.h" />
     <ClCompile Include="..\..\source\browse_tile_window.cpp" />
