--- a/vcproj/Project/Editor.vcxproj.filters
+++ b/vcproj/Project/Editor.vcxproj.filters
@@ -402,6 +402,7 @@
     <ClInclude Include="..\..\source\otmapgen.h" />
     <ClInclude Include="..\..\source\revscript_manager.h" />
     <ClInclude Include="..\..\source\wallize_window.h" />
+    <ClInclude Include="..\..\source\notes_window.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\source\json\json_spirit_reader.cpp">
@@ -712,6 +713,7 @@
     <ClCompile Include="..\..\source\otmapgen_dialog.cpp" />
     <ClCompile Include="..\..\source\revscript_manager.cpp" />
     <ClCompile Include="..\..\source\wallize_window.cpp" />
+    <ClCompile Include="..\..\source\notes_window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Editor.rc">
