--- a/vcproj/Project/Editor.vcxproj
+++ b/vcproj/Project/Editor.vcxproj
@@ -229,6 +229,8 @@
     <ClCompile Include="..\..\source\hotkey_manager.cpp" />
     <ClCompile Include="..\..\source\light_drawer.cpp" />
     <ClCompile Include="..\..\source\map_summary_window.cpp" />
+    <ClCompile Include="..\..\source\monster_maker_window.cpp" />
+    <ClCompile Include="..\..\source\monster_manager.cpp" />
     <ClCompile Include="..\..\source\notes_window.cpp" />
     <ClCompile Include="..\..\source\otmapgen.cpp" />
     <ClCompile Include="..\..\source\otmapgen_dialog.cpp" />
@@ -256,6 +258,8 @@
     <ClInclude Include="..\..\source\live_action_packets.h" />
     <ClInclude Include="..\..\source\main_toolbar.h" />
     <ClInclude Include="..\..\source\map_summary_window.h" />
+    <ClInclude Include="..\..\source\monster_maker_window.h" />
+    <ClInclude Include="..\..\source\monster_manager.h" />
     <ClInclude Include="..\..\source\notes_window.h" />
     <ClInclude Include="..\..\source\otmapgen.h" />
     <ClInclude Include="..\..\source\otmapgen_dialog.h" />
