--- a/vcproj/Project/Editor.vcxproj
+++ b/vcproj/Project/Editor.vcxproj
@@ -236,6 +236,7 @@
     <ClCompile Include="..\..\source\monster_manager.cpp" />
     <ClCompile Include="..\..\source\color_palette_ctrl.cpp" />
     <ClCompile Include="..\..\source\notes_window.cpp" />
+    <ClCompile Include="..\..\source\npc_manager.cpp" />
     <ClCompile Include="..\..\source\otmapgen.cpp" />
     <ClCompile Include="..\..\source\otmapgen_dialog.cpp" />
     <ClCompile Include="..\..\source\recent_brushes_window.cpp" />
@@ -269,6 +270,7 @@
     <ClInclude Include="..\..\source\monster_manager.h" />
     <ClInclude Include="..\..\source\color_palette_ctrl.h" />
     <ClInclude Include="..\..\source\notes_window.h" />
+    <ClInclude Include="..\..\source\npc_manager.h" />
     <ClInclude Include="..\..\source\otmapgen.h" />
     <ClInclude Include="..\..\source\otmapgen_dialog.h" />
     <ClInclude Include="..\..\source\otml.h" />
