--- a/vcproj/Project/Editor.vcxproj
+++ b/vcproj/Project/Editor.vcxproj
@@ -228,6 +228,7 @@
     <ClCompile Include="..\..\source\find_item_window.cpp" />
     <ClCompile Include="..\..\source\ground_validation_dialog.cpp" />
     <ClCompile Include="..\..\source\hotkey_manager.cpp" />
+    <ClCompile Include="..\..\source\item_editor_window.cpp" />
     <ClCompile Include="..\..\source\light_drawer.cpp" />
     <ClCompile Include="..\..\source\map_summary_window.cpp" />
     <ClCompile Include="..\..\source\monster_attack_dialog.cpp" />
@@ -261,6 +262,7 @@
     <ClInclude Include="..\..\source\find_creature_window.h" />
     <ClInclude Include="..\..\source\ground_validation_dialog.h" />
     <ClInclude Include="..\..\source\hotkey_manager.h" />
+    <ClInclude Include="..\..\source\item_editor_window.h" />
     <ClInclude Include="..\..\source\light_drawer.h" />
     <ClInclude Include="..\..\source\live_action_packets.h" />
     <ClInclude Include="..\..\source\main_toolbar.h" />
