--- a/vcproj/Project/Editor.vcxproj.filters
+++ b/vcproj/Project/Editor.vcxproj.filters
@@ -413,6 +413,8 @@
     <ClInclude Include="..\..\source\monster_attack_dialog.h" />
     <ClInclude Include="..\..\source\monster_defense_dialog.h" />
     <ClInclude Include="..\..\source\npc_manager.h" />
+    <ClInclude Include="..\..\source\doodads_filling_dialog.h" />
+    <ClInclude Include="..\..\source\item_editor_window.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\source\json\json_spirit_reader.cpp">
@@ -734,6 +736,8 @@
     <ClCompile Include="..\..\source\monster_loot_dialog.cpp" />
     <ClCompile Include="..\..\source\monster_defense_dialog.cpp" />
     <ClCompile Include="..\..\source\npc_manager.cpp" />
+    <ClCompile Include="..\..\source\doodads_filling_dialog.cpp" />
+    <ClCompile Include="..\..\source\item_editor_window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Editor.rc">
